fix spacing

--- a/src/implementations/vanilla/src/components/table/table.scss
+++ b/src/implementations/vanilla/src/components/table/table.scss
@@ -94,11 +94,3 @@
 .hig__table--compressed td:first-child {
   padding-left: 8px;
 }
-
-.hig__table__slot-cell {
-  // img {
-  //   &:first-child {
-  //     padding: 8px
-  //   }
-  // }
-}
